[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/WeaponAssets/Item__00.png" type="Texture" id=1]
[ext_resource path="res://Assets/CharacterAssets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Items/WorldItem.gd" type="Script" id=3]
[ext_resource path="res://UI/TooltipLabel.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 38.9915

[sub_resource type="CircleShape2D" id=5]
radius = 15.7578

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.75 ), Vector2( 1.1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ), Vector2( 0, -10 ), Vector2( 0, -15 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Spawn"

[node name="Node2D" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="MouseArea" type="Area2D" parent="."]

[node name="MouseCollision" type="CollisionShape2D" parent="MouseArea"]
position = Vector2( 0, -13 )
shape = SubResource( 5 )

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.75 )
texture = ExtResource( 2 )

[node name="ItemSprite" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Float"
anims/Float = SubResource( 4 )
anims/Spawn = SubResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 9.0
margin_top = -62.0
margin_right = 44.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 28.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" parent="PanelContainer/VBoxContainer" instance=ExtResource( 4 )]

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]
